[package]
name = "team"
version = "0.1.0"
authors = ["Dongri Jin <dongrify@gmail.com>"]

[dependencies]
iron = "0.5.1"
router = "0.5.1"
mount = "0.3.0"
persistent = "0.3.0"
staticfile = "0.4.0"
params = "0.6.0"
iron-sessionstorage = "0.6.6"
urlencoded = "0.5.0"
url = "1.0"
oauth2 = "1.2.1"
reqwest = "0.6.0"

postgres = { version = "0.14.1", features = ["with-chrono"] }

r2d2 = "0.7.2"
r2d2_postgres = "0.12.0"

handlebars-iron = "0.24.1"

serde = "1.0.7"
serde_json = "1.0.2"
serde_derive = "1.0.7"

rust-crypto = "0.2.36"

slack-hook = "0.4"

time = "0.1"

chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }

diff = "0.1.10"

hyper = "0.11.0"
hyper-tls = "0.1.1"
futures = "0.1.14"
tokio-core = "0.1.8"

log = "0.3"
fern = "0.4"

envy = "0.3"
lazy_static = "0.2.8"

[features]
integration_tests = []
